--- a/ASPdotNET_MVC_Tutorial/appsettings.json
+++ b/ASPdotNET_MVC_Tutorial/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=ISMAPC;Initial Catalog=ASPdotNET_MVC_Database;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+    }
 }
